--- a/src/app/pages/factory/factory.component.html
+++ b/src/app/pages/factory/factory.component.html
@@ -5,8 +5,8 @@
                 <div class="col">
                     <p class="premag-font-18 premag-color-01 premag-primary-font font-weight-bold premag-margin-top-80 premag-margin-bottom-40">A sede fabril da <span class="premag-color-05">PREMAG</span> está instalada nas margens da Rodovia BR-116/RJ, no km 111, em Citrolândia, Magé, RJ. Sua localização permite total integração com a malha rodoviária do Estado do Rio de Janeiro e situa-se junto à Estação de Citrolândia, no ramal ferroviário de acesso a Guapimirim.</p>
                 </div>
-                <div class="col">
-                    <img src="../../../assets/images/gogle-maps-fabrica.png" alt="endereço da fábrica" class="mt-5">
+                <div class="col premag-margin-top-80">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.763286892655!2d-43.02101192373152!3d-22.58795502655596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99bad2bf7ed661%3A0xe8cf8da35e7c6264!2sPREMAG%20-%20Sistema%20de%20Constru%C3%A7%C3%B5es%20Ltda.!5e0!3m2!1sen!2sbr!4v1682977210194!5m2!1sen!2sbr" width="762" height="340" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -15,14 +15,14 @@
         <h1 class="premag-page-title color-c11 text-uppercase premag-secondary-font d-flex justify-content-start align-items-center">Fábrica</h1>
         <div class="container premag-padding-top-80 premag-padding-bottom-80 premag-margin-left-0">
             <div class="row">
-                <div class="col-3 d-flex flex-column justify-content-start align-items-start">
-                    <img src="../../../assets/images/patio-fabrica.png" alt="Foto da fábrica" class="premag-margin-bottom-40">
-                    <img src="../../../assets/images/central-fabrica.png" alt="Foto da fábrica" class="premag-margin-bottom-40">
-                    <img src="../../../assets/images/armacao-fabrica.png" alt="Foto da fábrica" class="premag-margin-bottom-40">
+                <div class="col-lg-3 col-xs-12 d-flex flex-column justify-content-start align-items-start premag-fabrica-imagens">
+                    <img src="../../../assets/images/patio-fabrica.png" alt="Foto da fábrica" class="premag-margin-bottom-40 premag-fabrica-primeira-imagem">
+                    <img src="../../../assets/images/central-fabrica.png" alt="Foto da fábrica" class="premag-margin-bottom-40 premag-fabrica-segunda-imagem">
+                    <img src="../../../assets/images/armacao-fabrica.png" alt="Foto da fábrica" class="premag-margin-bottom-40 premag-fabrica-terceira-imagem">
                 </div>
-                <div class="col-9 premag-primary-font premag-font-24">
-                    <div class="premag-deco-retangulo-05 premag-deco-retangulo-h-05 premag-height-1x background-premag-color-05"></div>
-                    <div class="premag-deco-retangulo-90 premag-deco-retangulo-h-05 background-premag-color-05"></div>
+                <div class="col-lg-9 col-xs-12 premag-primary-font premag-font-24 premag-text">
+                    <div class="premag-deco-retangulo-05 premag-deco-retangulo-h-05 premag-height-1x background-premag-color-05 premag-deco-w"></div>
+                    <div class="premag-deco-retangulo-90 premag-deco-retangulo-h-05 background-premag-color-05 premag-deco-h"></div>
                     <p class="color-c6 premag-deco-retangulo-text premag-margin-left-20">A região dispõe de farta mão de obra, água, energia e está próxima aos centros produtores e distribuidores dos insumos básicos constituintes do concreto.<br>
                     O seu parque industrial conta com uma das mais avançadas usinas de concreto, permitindo a produção de concretos de alta resistência através do controle rigoroso de pesagem e eficiência de mistura possibilitando o transporte tanto em betoneiras como em caçambas para o caso de concretos mais secos.</p>
                     <p class="color-c6 premag-margin-left-20">Neste local também se encontra a central de armação que fornece o aço cortado, dobrado e montado tanto para uso interno da fábrica quanto para atendimento as necessidades no campo.</p>
@@ -35,19 +35,19 @@
         <div class="container">
             <div class="d-flex flex-row align-items-center justify-content-between premag-margin-top-80 premag-margin-bottom-80 premag-secondary-font">
                 <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
-                    <p>732</p>
+                    <p id="contadorPonte"><ngx-animated-counter [params]="paramsPontes"></ngx-animated-counter></p>
                     <p>Pontes</p>
                 </div>
                 <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
-                    <p>87</p>
+                    <p><ngx-animated-counter [params]="paramsViadutos"></ngx-animated-counter></p>
                     <p>Viadutos</p>
                 </div>
                 <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
-                    <p>247</p>
+                    <p><ngx-animated-counter [params]="paramsPassarelas"></ngx-animated-counter></p>
                     <p>Passarelas</p>
                 </div>
                 <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
-                    <p>1393</p>
+                    <p><ngx-animated-counter [params]="paramsObras"></ngx-animated-counter></p>
                     <p>Obras Concluídas</p>
                 </div>
             </div>
