--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,51 +1,51 @@
-.color-c1 { color: #FAFAFA; }
-.color-c2 { color: #E8E8E8; }
-.color-c3 { color: #D6D6D6; }
-.color-c4 { color: #C4C4C4; }
-.color-c5 { color: #B3B3B3; }
-.color-c6 { color: #A1A1A1; }
-.color-c7 { color: #8F8F8F; }
-.color-c8 { color: #7D7D7D; }
-.color-c9 { color: #6B6B6B; }
-.color-c10 { color: #595959; }
-.color-c11 { color: #474747; }
-.color-c12 { color: #363636; }
-.color-c13 { color: #242424; }
-.color-c14 { color: #121212; }
+.color-c1 { color: #FAFAFA !important; }
+.color-c2 { color: #E8E8E8 !important; }
+.color-c3 { color: #D6D6D6 !important; }
+.color-c4 { color: #C4C4C4 !important; }
+.color-c5 { color: #B3B3B3 !important; }
+.color-c6 { color: #A1A1A1 !important; }
+.color-c7 { color: #8F8F8F !important; }
+.color-c8 { color: #7D7D7D !important; }
+.color-c9 { color: #6B6B6B !important; }
+.color-c10 { color: #595959 !important; }
+.color-c11 { color: #474747 !important; }
+.color-c12 { color: #363636 !important; }
+.color-c13 { color: #242424 !important; }
+.color-c14 { color: #121212 !important; }
 
-.premag-color-01 { color: #FEF6E1; }
-.premag-color-02 { color: #FFEDBE; }
-.premag-color-03 { color: #FFE195; }
-.premag-color-04 { color: #FFCF55; }
-.premag-color-05 { color: #FEC32B; }
-.premag-color-06 { color: #EDB31D; }
-.premag-color-07 { color: #DCA310; }
-.premag-color-08 { color: #C08C05; }
-.premag-color-09 { color: #886200; }
-.premag-color-10 { color: #2F2200; } 
+.premag-color-01 { color: #FEF6E1 !important; }
+.premag-color-02 { color: #FFEDBE !important; }
+.premag-color-03 { color: #FFE195 !important; }
+.premag-color-04 { color: #FFCF55 !important; }
+.premag-color-05 { color: #FEC32B !important; }
+.premag-color-06 { color: #EDB31D !important; }
+.premag-color-07 { color: #DCA310 !important; }
+.premag-color-08 { color: #C08C05 !important; }
+.premag-color-09 { color: #886200 !important; }
+.premag-color-10 { color: #2F2200 !important; } 
 
-.background-color-c1 { background-color: #FAFAFA; }
-.background-color-c2 { background-color: #E8E8E8; }
-.background-color-c3 { background-color: #D6D6D6; }
-.background-color-c4 { background-color: #C4C4C4; }
-.background-color-c5 { background-color: #B3B3B3; }
-.background-color-c6 { background-color: #A1A1A1; }
-.background-color-c7 { background-color: #8F8F8F; }
-.background-color-c8 { background-color: #7D7D7D; }
-.background-color-c9 { background-color: #6B6B6B; }
-.background-color-c10 { background-color: #595959; }
-.background-color-c11 { background-color: #474747; }
-.background-color-c12 { background-color: #363636; }
-.background-color-c13 { background-color: #242424; }
-.background-color-c14 { background-color: #121212; }
+.background-color-c1 { background-color: #FAFAFA !important; }
+.background-color-c2 { background-color: #E8E8E8 !important; }
+.background-color-c3 { background-color: #D6D6D6 !important; }
+.background-color-c4 { background-color: #C4C4C4 !important; }
+.background-color-c5 { background-color: #B3B3B3 !important; }
+.background-color-c6 { background-color: #A1A1A1 !important; }
+.background-color-c7 { background-color: #8F8F8F !important; }
+.background-color-c8 { background-color: #7D7D7D !important; }
+.background-color-c9 { background-color: #6B6B6B !important; }
+.background-color-c10 { background-color: #595959 !important; }
+.background-color-c11 { background-color: #474747 !important; }
+.background-color-c12 { background-color: #363636 !important; }
+.background-color-c13 { background-color: #242424 !important; }
+.background-color-c14 { background-color: #121212 !important; }
 
-.background-premag-color-01 { background-color: #FEF6E1; }
-.background-premag-color-02 { background-color: #FFEDBE; }
-.background-premag-color-03 { background-color: #FFE195; }
-.background-premag-color-04 { background-color: #FFCF55; }
-.background-premag-color-05 { background-color: #FEC32B; }
-.background-premag-color-06 { background-color: #EDB31D; }
-.background-premag-color-07 { background-color: #DCA310; }
-.background-premag-color-08 { background-color: #C08C05; }
-.background-premag-color-09 { background-color: #886200; }
-.background-premag-color-10 { background-color: #2F2200; } 
+.background-premag-color-01 { background-color: #FEF6E1 !important; }
+.background-premag-color-02 { background-color: #FFEDBE !important; }
+.background-premag-color-03 { background-color: #FFE195 !important; }
+.background-premag-color-04 { background-color: #FFCF55 !important; }
+.background-premag-color-05 { background-color: #FEC32B !important; }
+.background-premag-color-06 { background-color: #EDB31D !important; }
+.background-premag-color-07 { background-color: #DCA310 !important; }
+.background-premag-color-08 { background-color: #C08C05 !important; }
+.background-premag-color-09 { background-color: #886200 !important; }
+.background-premag-color-10 { background-color: #2F2200 !important; } 
