--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="premag-header background-color-c14" id="premag-header">
     <div class="container">
-        <nav class="navbar fixed-top background-color-c14">
+        <nav class="navbar fixed-top background-color-c14 navbar-expand-lg">
             <div class="container-fluid">
               <span class="navbar-brand mb-0 h1"><a href="home"><img src="../../../assets/images/logo-premag-2.png" alt="Logo da Premag"></a></span>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" (click)="collapse()">
